Added a Module Config option in the advanced section to change the path for the API helper command, and improved automatic selection of a path if the default directory /usr/sbin is not writable.
Third-party content styles can now be deleted by the master admin from the Content Styles page.
Added the --default-ip flag to modify-domain.pl, to revert to a shared IP address.
Custom links can be limited to virtual servers with a specific template if you have any custom templates defined, for more control over when each link is displayed.
Backups now include any custom template used to create virtual servers, which allow domains to be restored even on systems that do not yet have the original templates.
When a virtual server's IP address is changed, the addresses of all alias domains are updated to match.
The Website Options page now has a field to enable matching all sub-domains for the virtual server's website, via a *.domain.com DNS entry and Apache server alias directive. This can also be enabled for some or all domains using the modify-web.pl command-line API.
If a backup is taken on a system that uses ~/mail for user folders and restored on one using ~/Maildir, they will be properly converted during the restore (and vice-versa).
When a domain is restored on a new system, the MySQL socket file path and options that reference the home directory in its php.ini file are updated to match the new system.
Preserve encrypted passwords when backing up domains, in case they don't match the plaintext password stored by Virtualmin. Also, have validation report an error in the case of a mismatch.
Re-organized the custom links page to move editing of each link into a separate form, and allow links to be limited to virtual servers with some feature enabled.
---- Changes since 3.61 ----
Updated the Nucleus script installer to version 3.33, and Movable Type to 4.21.
Added a button to edit pages as text (without the HTML editor) to the Edit Web Pages feature.