@@ -1520,6 +1520,8 @@ check_desc=The status of your system is being checked to ensure that all enabled
 check_netok=Webmin's Network Configuration module is installed and supported.
 check_defip=Default IP address for virtual servers is $1.
 check_ewebsuexec=Suexec is enabled in the default template, but the Apache module <tt>mod_suexec</tt> is not installed or not enabled.
+check_ewebsuexecbin=Suexec is enabled in the default template, but the <tt>suexec</tt> command was not found on your system.
+check_ewebsuexechome=The Suexec command on your system is configured to only run scripts under $2, but the Virtualmin base directory is $1. CGI and PHP scripts run as domain owners will not be executed.
 check_ewebactions=The Apache module <tt>mod_actions</tt> is either not installed or not enabled.
 check_webok=Apache is installed.
 check_ftpok=ProFTPd is installed.
