@@ -973,3 +973,4 @@ Re-organized the custom links page to move editing of each link into a separate 
 ---- Changes since 3.61 ----
 Updated the Nucleus script installer to version 3.33, and Movable Type to 4.21.
 Added a button to edit pages as text (without the HTML editor) to the Edit Web Pages feature.
+The configuration check now detects a missing or incorrect suexec, to easier find problems with the base directory that will break PHP and CGI scripts.
